--- a/index.html
+++ b/index.html
@@ -2,15 +2,17 @@
 <html lang="en" dir="ltr">
     <head>
         <meta charset="utf-8">
-        <title><<b>Limiless</b></title>
+        <title>Text</title>
     </head>
     <body>
 
-      <h1><b>LIMILESS</b></h1>
-
-      <img src="Coverpic.jpg" alt="two hands"></>
+      <img src="coverpic.jpg" alt="two hands" />
       <!-- https://consequenceofsound.net/2016/12/album-review-run-the-jewels-run-the-jewels-3/ -->
 
+      <h1 id="top">LIMILESS</h1>
+      <a href="higher">Higher</a><br />
+      <a href="games">Games</a><br />
+      <a href="Summer_love">Summer Love</a><br />
 
       <h2>The Fourth Studio Album</h2>
       <p><strong>Track Listing:</strong></p>
@@ -28,10 +30,6 @@
       </ol>
 
 
-
-
-
-
-
+      <p><a href="#top">Top</a></p>
     </body>
-</html>
+  </html>
